--- a/src/index.css
+++ b/src/index.css
@@ -18,18 +18,46 @@ li{
 li a {
   display: block;
   color: white;
-  background-color: blue;
+  background-color: rgb(0, 0, 0);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
 li a:hover:not(.active) {
-  background-color: rgb(0, 0, 0);
-  color: rgb(167, 13, 13);
+  background-color:  rgb(0, 170, 255);
 }
 
 li a.active {
   color: white;
-  background-color: black;
+  background-color: rgb(0, 170, 255) ;
+}
+
+
+
+
+
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #cef;
+  border-color: rgb(0, 170, 255) transparent rgb(0, 170, 255) transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
